--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,5 +7,25 @@
 </head>
 <body>
     <h1>Pizza</h1>
+    <img src="images/pizza.jpeg"/>
+    <h2>Description</h2>
+    <p>This 2-ingredient pizza dough is fast and easy to make and tastes great! 
+        Greek yogurt is the secret ingredient and baking the crust at a higher 
+        temperature is the key to making this the perfect pizza. It doesn't get 
+        any easier than this folks.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <i>Self-rising flour</i>
+        <i>Yogurt</i>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <i>Mix Ingredients: Mix the flour and yogurt until a shaggy dough forms.</i>
+        <i>Knead: Transfer to a flour dusted work surface, then knead for 8 to 10 minutes. 
+            Add more flour as needed if the dough becomes too sticky.</i>
+        <i>Parbake: Grease the pizza pan with cooking spray. Spread the dough to the edges 
+            of a pan. Parbake the crust for 5 to 7 minutes. Remove from the oven, then add sauce and toppings.</i>
+        <i>Finish Baking: Return the pizza to the oven and bake until the crust is lightly browned. </i>
+    </ol>
 </body>
 </html>
