--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pizza.html">Pizza</a>
+    <ol>
+        <li><a href="recipes/pizza.html">Pizza</a></li>
+        <li><a href="recipes/chicken.html">Pizza</a></li>
+    </ol>
 </body>
 </html>
