--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -15,17 +15,17 @@
         any easier than this folks.</p>
     <h2>Ingredients</h2>
     <ul>
-        <i>Self-rising flour</i>
-        <i>Yogurt</i>
+        <li>Self-rising flour</li>
+        <li>Yogurt</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <i>Mix Ingredients: Mix the flour and yogurt until a shaggy dough forms.</i>
-        <i>Knead: Transfer to a flour dusted work surface, then knead for 8 to 10 minutes. 
-            Add more flour as needed if the dough becomes too sticky.</i>
-        <i>Parbake: Grease the pizza pan with cooking spray. Spread the dough to the edges 
-            of a pan. Parbake the crust for 5 to 7 minutes. Remove from the oven, then add sauce and toppings.</i>
-        <i>Finish Baking: Return the pizza to the oven and bake until the crust is lightly browned. </i>
+        <li>Mix Ingredients: Mix the flour and yogurt until a shaggy dough forms.</li>
+        <li>Knead: Transfer to a flour dusted work surface, then knead for 8 to 10 minutes. 
+            Add more flour as needed if the dough becomes too sticky.</li>
+        <li>Parbake: Grease the pizza pan with cooking spray. Spread the dough to the edges 
+            of a pan. Parbake the crust for 5 to 7 minutes. Remove from the oven, then add sauce and toppings.</li>
+        <li>Finish Baking: Return the pizza to the oven and bake until the crust is lightly browned.</li>
     </ol>
 </body>
 </html>
