Updated index list and fixed recipe image paths.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ol>
+    <ul>
         <li><a href="recipes/pizza.html">Pizza</a></li>
-        <li><a href="recipes/chicken.html">Pizza</a></li>
-    </ol>
+        <li><a href="recipes/chicken.html">Oven Fried Chicken</a></li>
+        <li><a href="recipes/meatloaf.html">Air Fryer Meatloaf</a></li>
+    </ul>
 </body>
 </html>
