--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Pizza</h1>
-    <img src="images/pizza.jpeg"/>
+    <img src="../images/pizza.jpeg"/>
     <h2>Description</h2>
     <p>This 2-ingredient pizza dough is fast and easy to make and tastes great! 
         Greek yogurt is the secret ingredient and baking the crust at a higher 
