--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Oven Fried Chicken</h1>
-    <img src="images/chicken.jpeg"/>
+    <img src="../images/chicken.jpeg"/>
     <h2>Description</h2>
     <p>I love fried chicken, but it takes so long and is such a big mess. 
         I came up with this oven-fried version, and have been making it 
